--- a/index.html
+++ b/index.html
@@ -23,23 +23,37 @@
                 <img class="hbd-header-foto" src="img/pierce.png" alt="paul pierce jugando al basquet">
                 <img class="hbd-header-foto" src="img/wade.png" alt="wade saltando con el balon en mano">
          </header>
-         <nav class="navbar navbar-expand-lg bg-light">
-            <div class="container-fluid">
-              <a class="navbar-brand">Puestos</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                  <a class="nav-link active" aria-current="page" href="pages/michaeljordan.html" target="_blank">1</a>
-                  <a class="nav-link active" aria-current="page" href="pages/magicjohnson.html" target="_blank">2</a>
-                  <a class="nav-link active" aria-current="page" href="pages/lebronjames.html" target="_blank">3</a>
-                  <a class="nav-link active" aria-current="page" href="pages/abduljabbar.html" target="_blank">4</a>
-                  <a class="nav-link active" aria-current="page" href="pages/kobebryant.html" target="_blank">5</a>
-                </div>
-              </div>
+         <nav class="navbar navbar-expand-lg navbar-dark"style="background-color:#0f1618 ;">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="#">Puestos</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="pages/michaeljordan.html">1</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="pages/magicjohnson.html">2</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="pages/lebronjames.html">3</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="pages/abduljabbar.html">4</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="pages/kobebryant.html">5</a>
+                </li>
+              </ul>
+              <form class="d-flex" role="search">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Search</button>
+              </form>
             </div>
-          </nav> 
+          </div>
+        </nav>
          
          <br><br>
      
@@ -110,10 +124,8 @@
                 </ul>
             </div>
             <div class="footer-2">
-                <a href="https://www.instagram.com/hablemosdebasquet/" 
-                target="_blank">VISITANOS EN INSTAGRAM</a>
-                <a  href="https://www.instagram.com/hablemosdebasquet/"  target="_blank"><img src="img/instagram.png" alt="el logo de instagram" style="width:50px;height: 50px;"></a>
-                <h4> todos los derechos reservados.</h4>
+                <a  href="https://www.youtube.com/channel/UCX59bxXuXn880yQJwsE676A"  target="_blank"><img src="img/youtube.png" alt="el logo de youtube" style="width:60px;height: 60px;"></a>
+                <a  href="https://www.instagram.com/hablemosdebasquet/"  target="_blank"><img src="img/instagram.png" alt="el logo de instagram" style="width:60px;height: 60px;"></a>
             </div> 
      </footer>
 
